# myRemoteDevice

./: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  ble.c  ble.h  consoleCommands.c  consoleCommands.h  consoleRegister.c  exampleCom.c  exampleCom2.h  examplecom.h  exapmleCom2.c  idf_component.yml  linker_script.ld  myRemoteDevice.c  myRemoteDevice.h  myRemoteDeviceInclude.h  mySection.h  nvsFunctions.c  nvsFunctions.h  ota.c  ota.h  prompt.txt  requestTaskBundle.c  requestTaskBundle.h  root_ca_cert.c  strip.c  strip.h  test.c  test.h  time_sync.c  time_sync.h  wifi.c  wifi.h
